--- a/tutorial.html
+++ b/tutorial.html
@@ -90,7 +90,7 @@
             <div class="modal-footer">
                 <a id="prevBtn" href="#" onclick="showStep('prev')" class="btn"><span id="i18n_prev">Previous</span></a>
                 <a id="nextBtn" href="#" onclick="showStep('next')" class="btn btn-success"><span id="i18n_next">Next</span></a>
-                <a id="startContrib" href="../thefacewemake2/newtask" class="btn btn-primary" style="display:none"><i class="icon-thumbs-up"></i> <span id="i18n_start">Start collaborating!</span></a>
+                <a id="startContrib" href="../thefacewemake/newtask" class="btn btn-primary" style="display:none"><i class="icon-thumbs-up"></i> <span id="i18n_start">Start collaborating!</span></a>
             </div>
         </div>
     </div>
